@@ -36,7 +36,7 @@ public class RFToolsBase implements ModBase {
         instance = this;
 
 //        ModLoadingContext.get().registerConfig(ModConfig.Type.CLIENT, Config.CLIENT_CONFIG);
-        ModLoadingContext.get().registerConfig(ModConfig.Type.COMMON, Config.COMMON_CONFIG);
+        ModLoadingContext.get().registerConfig(ModConfig.Type.SERVER, Config.SERVER_CONFIG);
 
         WorldGenSetup.register();
         MachineInfuserSetup.register();
